# lexdrift

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  lexdrift.db-journal  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: c6f303a1b05c_initial_schema.py  e013c837d927_add_sentence_changes_table.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
models/: risk_classifier.pt
scripts/: backfill.py  run_all.py
src/lexdrift/: config.py  main.py
src/lexdrift/api/: alerts.py  companies.py  drift.py  filings.py  research.py
src/lexdrift/db/: engine.py  models.py  session.py
src/lexdrift/edgar/: client.py  filings.py  parser.py  tickers.py
src/lexdrift/nlp/: anomaly.py  boilerplate.py  contagion.py  cross_filing.py  diff.py  drift.py  embeddings.py  entropy.py  intelligence.py  latent_space.py  narrative.py  obfuscation.py  patterns.py  phrases.py  reasoning.py  risk.py  sentences.py  sentiment.py  tokenizer.py  velocity.py
src/lexdrift/training/: backtest.py  boilerplate_classifier.py  data_quality.py  finetune.py  risk_classifier.py
src/lexdrift/workers/: analyze.py  cache.py  celery_app.py  ingest.py  monitor.py  (+1 more)
tests/: conftest.py  test_integration.py
tests/test_api/: test_companies.py  test_health.py
tests/test_edgar/: test_parser.py
tests/test_nlp/: test_anomaly.py  test_diff.py  test_entropy.py  test_obfuscation.py  test_phrases.py  test_risk.py  test_sentiment.py  test_tokenizer.py  test_velocity.py
(+11 files in other folders)
